# SnowGlobe

./: README.md
cyboquatics/src/: eco_impact_scoring.rs
docs/: SnowGlobe.md
projects/phoenix-mar/.github/workflows/: ci-cd.yml
projects/phoenix-mar/qpudatashards/: phoenix_mar_telemetry_shard.csv  phoenix_mar_telemetry_shard.md
projects/phoenix-mar/src/: MarValidator.cs
projects/phoenix/shards/: eco_impact_validator.rs
projects/snowglobe/rust-ant-cybo-sim/: Cargo.toml
projects/snowglobe/rust-ant-cybo-sim/src/: main.rs  models.rs  shard_io.rs  sim_kernel.rs
qpudatashards/particles/: EcoImpactPredictionWindow2026v1-PHX-MAR-sample.csv  EcoImpactPredictionWindow2026v1.csv
snowglobe/src/: beesafety_kernel.rs  ingestion_pipeline.rs
